asteria/core/tests/errors/elaboration_errors/term_constructor_not_in_scope_hint_no_term_constructors_in_scope_patterns.asteriacode
data Foo;;

x : Test$Foo()
  = case Test$x of
       | Bar(;) -> Test$x;;
